Fix font size jump in code blocks

--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -9,7 +9,7 @@
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size:  $base-font-size * 0.81;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
@@ -30,7 +30,7 @@ $on-palm:          600px;
 
 // Width, below which, a laptop-mode is activated. Above this width, the
 // "normal?"-mode is activated.
-$on-laptop:        1024px;
+$on-laptop:        3600px;
 
 
 
